--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,26 +10,31 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <servlet>
+    <servlet-name>myServlet</servlet-name>
+    <servlet-class>it.project.servlet.MyServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>myServlet</servlet-name>
+    <url-pattern>/servlet</url-pattern>
+  </servlet-mapping>
   
-<servlet>
-	<servlet-name>myServlet</servlet-name>
-	<servlet-class>it.project.servlet.MyServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>myServlet</servlet-name>
-	<url-pattern>/servlet</url-pattern>
-</servlet-mapping>
-
-<servlet>
+  <servlet>
     <servlet-name>newProgramServlet</servlet-name>
     <servlet-class>it.project.servlet.NewProgramServlet</servlet-class>
-</servlet>
-
-<servlet-mapping>
+  </servlet>
+  <servlet-mapping>
     <servlet-name>newProgramServlet</servlet-name>
     <url-pattern>/newProgramServlet</url-pattern>
-</servlet-mapping>
-
-
-
+  </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>assignProgramToRoom</servlet-name>
+    <servlet-class>it.project.servlet.AssignProgramToRoom</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>assignProgramToRoom</servlet-name>
+    <url-pattern>/assignProgramToRoom</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
