--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,9 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpmime-4.5.9.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jna-4.5.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jna-platform-4.5.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aws-iot-device-sdk-java-1.3.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-2.9.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-databind-2.9.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aws-iot-device-sdk-java-samples-1.3.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
